--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,22 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: backbone_production
+  username: backbone_production
+  password: QuiquaiPh7Uy
+  host: localhost
+  pool: 5
+  timeout: 5000
+
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: backbone_staging
+  username: backbone_staging
+  password: Noocovohx9ph
+  host: localhost
   pool: 5
   timeout: 5000
 
